# blog

./: blog.cabal  flake.nix  result
.shake/: .shake.database
app/: Main.hs
output/: atom.xml  blog.html  index.html
output/css/: style.css
output/posts/: sample-post.html
output/templates/: index.html
site/: robots.txt
site/css/: style.css
site/templates/: atom.xml  blog.html.main  header.html  index.html.main  post.html
web/css/: style.css
web/posts/: sample-post.md
web/templates/: footer.html  header.html  index.html  post.html
